--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,6 +1,6 @@
 
 body {
-  min-width: 1600px;
+  // min-width: 1600px;
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
   font-style: normal;
