--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -3,9 +3,18 @@
 //==================================
 
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--section-bgr);
+
+  @media screen and (min-width: 768px) {
+    // padding-top: 100px;
+    // padding-bottom: 100px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   &-container {
   }
@@ -20,6 +29,7 @@
     @include centeredFlex; //mixin centeredFlex
     gap: 30px;
     text-align: center;
+    flex-wrap: wrap;
 
     &-item {
       background-color: var(--general-wight);
