--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,21 @@ img {
   margin: 0 auto;
   /* outline: 2px solid orange; */
 }
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
+}
 
 .visually-hidden {
   position: absolute;
@@ -568,13 +583,15 @@ img {
   background-color: var(--general-wight);
 }
 .rules-list__text {
-  display: inline-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
 }
 .rules-list__text::before {
   margin-bottom: 30px;
   content: "";
-  width: 270px;
+  width: 100%;
   height: 130px;
   background-color: var(--section-bgr);
   background-repeat: no-repeat;
@@ -597,6 +614,7 @@ img {
 .rules-list {
   display: flex;
   gap: 30px;
+  flex-wrap: wrap;
 }
 .rules-list__title {
   margin-bottom: 10px;
@@ -614,6 +632,11 @@ img {
   /* padding-top: 94px; */
   padding-bottom: 94px;
   background-color: var(--general-wight);
+}
+@media screen and (max-width: 1199px) {
+  .development {
+    display: none;
+  }
 }
 .development-title {
   font-size: 36px;
@@ -679,9 +702,6 @@ img {
   background-color: var(--general-wight);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-.team-list-item img {
-  display: block;
 }
 .team-list-title {
   font-weight: 500;
