--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,4 +4,14 @@
   padding-right: 15px;
   margin: 0 auto;
   /* outline: 2px solid orange; */
+
+   @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 720px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
 }
