--- a/sass/layouts/_development.scss
+++ b/sass/layouts/_development.scss
@@ -7,6 +7,14 @@
   padding-bottom: 94px;
   background-color: var(--general-wight);
 
+  @media screen and (min-width: 768px) {
+    // padding-top: 100px;
+    // padding-bottom: 100px;
+  }
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
+
   &-container {
   }
 
