--- a/sass/layouts/_rules.scss
+++ b/sass/layouts/_rules.scss
@@ -12,13 +12,16 @@
   &-title {
   }
   &-list__text {
-    display: inline-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     flex-direction: column;
 
     &::before {
       margin-bottom: 30px;
       content: "";
-      width: 270px;
+      width: 100%;
       height: 130px;
       background-color: var(--section-bgr);
       background-repeat: no-repeat;
@@ -55,6 +58,7 @@
   &-list {
     display: flex;
     gap: 30px;
+    flex-wrap: wrap;
 
     &__title {
       margin-bottom: 10px;
