--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -37,9 +37,10 @@
         0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
       border-radius: 0px 0px 4px 4px;
 
-      & img {
-        display: block;
-      }
+      
+      // & img {
+      //   display: block;
+      // }
     }
 
     &-title {
@@ -55,7 +56,8 @@
     }
     &-profession {
       padding-top: 30px;
-      padding-bottom: 30px;
+      padding-bottom: 30px;     
+      
     }
   }
 }
