--- a/sass/layouts/_rules.scss
+++ b/sass/layouts/_rules.scss
@@ -12,16 +12,13 @@
   &-title {
   }
   &-list__text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+    display: inline-flex;
     flex-direction: column;
 
     &::before {
       margin-bottom: 30px;
       content: "";
-      width: 100%;
+      width: 270px;
       height: 130px;
       background-color: var(--section-bgr);
       background-repeat: no-repeat;
@@ -59,6 +56,9 @@
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
+
+     
+        
 
     &__title {
       margin-bottom: 10px;
