--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -36,6 +36,8 @@ portfolio             #F5F5F5
   --frame-color: #eeeeee;
   --secondary-frame-color: #ececec;
   --svg-gray: #afb1b8;
+  --hero-grad: rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4);
 }
 
 // Випадаковий експеремент зі списком
