--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 body {
   // min-width: 1600px;
@@ -6,4 +11,10 @@ body {
   font-style: normal;
   font-size: 16px;
   line-height: 1.2;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
