--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -12,7 +12,7 @@
   }
 }
 .hero .btn {
-  width: 216px;
+  width: 200px;
   height: 50px;
   font-weight: 700;
   font-size: 16px;
@@ -22,6 +22,15 @@
   background-color: var(--accent-color);
   border-color: var(--accent-color);
   border-radius: 4px;
+  
+  @include tablet {
+    width: 200px;
+    height: 50px;
+  }
+  @include desktop {
+    width: 216px;
+    height: 50px;
+  }
 }
 .filters-list .btn {
   padding-top: 6px;
