--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -1,3 +1,19 @@
+.checkbox-fild {
+  margin-bottom: 30px;
+  position: relative;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  width: 370px;
+
+  @include tablet {
+  }
+  @include desktop {
+    justify-content: center;
+    width: 448px;
+  }
+}
+
 .checkbox {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -6,13 +22,23 @@
 
   &-text {
     margin-left: 8px;
-    font-size: 14px;
-    line-height: calc(24 / 14);
+    font-size: 12px;
+    line-height: calc(14 / 14);
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
+
+    @include tablet {
+    }
+    @include desktop {
+      font-size: 14px;
+      line-height: calc(24 / 14);
+    }
   }
 
   &-link {
+    font-size: 12px;
+    line-height: calc(14 / 14);
+    letter-spacing: 0.03em;
     color: var(--accent-color);
     text-decoration: none;
     position: relative;
@@ -45,6 +71,4 @@
       background-origin: content-box;
     }
   }
-
-  
 }
