--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,17 +1,19 @@
 .container {
-  width: 100%;// 1200px;
+  width: 100%; // 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
   /* outline: 2px solid orange; */
 
-   @media screen and (min-width: 480px) {
-    max-width: 480px;
+  @include mobibe{
+    width: 480px;
+
   }
-  @media screen and (min-width: 768px) {
-    max-width: 720px;
+  @include tablet {
+    width: 768px;
+
   }
-  @media screen and (min-width: 1200px) {
-    max-width: 1200px;
+  @include desktop {
+    width: 1200px;
   }
 }
