--- a/sass/layouts/_development.scss
+++ b/sass/layouts/_development.scss
@@ -7,11 +7,11 @@
   padding-bottom: 94px;
   background-color: var(--general-wight);
 
-  @media screen and (min-width: 768px) {
+  @include tablet {
     // padding-top: 100px;
     // padding-bottom: 100px;
   }
-  @media screen and (max-width: 1199px) {
+  @include desktop {
     display: none;
   }
 
