--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -2,25 +2,65 @@
 // Hero
 //==================================
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+
+  @include desktop {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 
   &-background {
-    max-width: 1600px;
-    height: 600px;
+    max-width: 480px;
+    height: 400px;
     margin-left: auto;
     margin-right: auto;
 
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../images/hero-image.jpg);
+    @include tablet {
+      max-width: 768px;
+      height: 400px;
+    }
+
+    @include desktop {
+      max-width: 1600px;
+      height: 600px;
+    }
+
+    //---------------Image Mobile ---------------
+    background-image: linear-gradient(var(--hero-grad)),
+      url(../images/hero-bg-480.jpg);
+
+    @include retina {
+      background-image: linear-gradient(var(--hero-grad)),
+        url(../images/hero-bg-480-2x.jpg);
+    }
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-color: var(--hero-background);
+
+    //---------------Image Tablet ---------------
+    @include tablet {
+      background-image: linear-gradient(var(--hero-grad)),
+        url(../images/hero-bg-768.jpg);
+
+      @include retina {
+        background-image: linear-gradient(var(--hero-grad)),
+          url(../images/hero-bg-768-2x.jpg);
+      }
+    }
+    //---------------Image Desktop ---------------
+    @include desktop {
+      background-image: linear-gradient(var(--hero-grad)),
+        url(../images/hero-bg-1200.jpg);
+
+      @include retina {
+        background-image: linear-gradient(var(--hero-grad)),
+          url(../images/hero-bg-1200-2x.jpg);
+      }
+    }
   }
+
   &-container {
     display: flex;
     flex-direction: column;
@@ -31,9 +71,17 @@
     color: var(--general-wight);
     text-transform: uppercase;
     font-weight: 900;
-    font-size: 44px;
-    line-height: calc(60 / 44);
+    font-size: 26px;
+    line-height: calc(42 / 26);
     text-align: center;
     letter-spacing: 0.06em;
+
+    @include tablet {
+    }
+
+    @include desktop {
+      font-size: 44px;
+      line-height: calc(60 / 44);
+    }
   }
 }
