--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -7,9 +7,9 @@
   padding-bottom: 60px;
   background-color: var(--section-bgr);
 
-  @media screen and (min-width: 768px) {
-    // padding-top: 100px;
-    // padding-bottom: 100px;
+  @include tablet {
+    // padding-top: 60px;
+    // padding-bottom: 60px;
   }
   @media screen and (min-width: 1200px) {
     padding-top: 94px;
@@ -21,9 +21,19 @@
   &-title {
     margin-bottom: 50px;
     font-weight: 700;
-    font-size: 36px;
-    line-height: calc(42 / 36);
+    font-size: 28px;
+    line-height: calc(33 / 28);
     text-align: center;
+    letter-spacing: 0.03em;
+
+    @include tablet {
+      font-size: 28px;
+      line-height: calc(33 / 28);
+    }
+    @include desktop {
+      font-size: 36px;
+      line-height: calc(42 / 36);
+    }
   }
   &-list {
     @include centeredFlex; //mixin centeredFlex
@@ -37,9 +47,19 @@
         0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
       border-radius: 0px 0px 4px 4px;
 
-      
+      width: 100%;
+
+      @media screen and (min-width: 768px) {
+        width: calc((100% - 30px) / 2);
+      }
+      @media screen and (min-width: 1200px) {
+        width: calc((100% - 90px) / 4);
+      }
+
       // & img {
       //   display: block;
+      //   max-width: 100%;
+      //   height: auto;
       // }
     }
 
@@ -56,8 +76,7 @@
     }
     &-profession {
       padding-top: 30px;
-      padding-bottom: 30px;     
-      
+      padding-bottom: 30px;
     }
   }
 }
