--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,13 +13,16 @@
 
 .modal {
   position: absolute;
-  width: 450px;
+  max-width: 480px;
+  width: 100%;
   min-height: 609px;
 
   @include tablet {
+    max-width: 450px;
+    // width: 450px;
   }
   @include desktop {
-    width: 528px;
+    max-width: 528px;
     min-height: 581px;
   }
 
@@ -102,6 +105,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   /* outline: 1px solid black; */
 }
 
@@ -109,7 +113,7 @@
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 42px;
-  width: 370px;
+  width: 100%;
   height: 40px;
   @include tablet {
   }
@@ -169,14 +173,13 @@
 
 .input-feetback {
   resize: none;
-  width: 370px;
+  width: 100%;
   height: 120px;
 
   @include tablet {
   }
   @include desktop {
-    width: 448px;
-    height: 40px;
+    max-width: 448px;
   }
 
   padding-top: 12px;
