--- a/sass/layouts/_customers.scss
+++ b/sass/layouts/_customers.scss
@@ -1,5 +1,5 @@
 /* _________________Customers_______________ */
-.customers{
+.customers {
   background-color: var(--general-wight);
 }
 .customers__container {
@@ -8,18 +8,33 @@
 }
 .customers__title {
   margin-bottom: 50px;
-  font-size: 36px;
-  line-height: calc(42 / 36);
+  font-size: 28px;
+  line-height: calc(33 / 28);
   text-align: center;
   letter-spacing: 0.03em;
+  @include tablet {
+   
+  }
+  @include desktop {
+    font-size: 36px;
+    line-height: calc(42 / 36);
+  }
 }
 .labels {
   display: flex;
+  flex-wrap: wrap;
   gap: 30px;
+  width: 100%;
 }
 .labels__item {
-  width: 172px;
+  width: calc((100% - 30px) / 2);;
   height: 92px;
+  @include tablet {
+    width: 226px;
+  }
+  @include desktop {
+    width: 170px;
+  }
 
   &:hover {
     border-color: var(--accent-color);
