--- a/sass/layouts/_rules.scss
+++ b/sass/layouts/_rules.scss
@@ -3,22 +3,61 @@
 //==================================
 
 .rules {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--general-wight);
+
+  @include tablet {
+  }
+  @include desktop {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   &-container {
   }
   &-title {
   }
+  &-list {
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+
+    &__title {
+      margin-bottom: 10px;
+      text-transform: uppercase;
+      text-align: center;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: calc(16 / 14);
+      @include tablet {
+        text-align: left;
+      }
+    }
+    &__item {
+      color: var(--secondary-text-color);
+      font-size: 14px;
+      line-height: calc(24 / 14);
+    }
+  }
+
   &-list__text {
     display: inline-flex;
     flex-direction: column;
+    width: 100%;
+    @include tablet {
+      // width: 354px;
+      width: calc((100% - 30px) / 2);
+    }
+    @include desktop {
+      // width: 270px;
+      width: calc((100% - 90px) / 4);
+    }
 
     &::before {
       margin-bottom: 30px;
       content: "";
-      width: 270px;
+      width: 100%;
       height: 130px;
       background-color: var(--section-bgr);
       background-repeat: no-repeat;
@@ -26,22 +65,7 @@
       background-size: 70px 70px;
       border-radius: 4px;
     }
-    // &:nth-child(1)::before {
-    //   background-image: url(../images/antenna.svg);
-    // }
-    // &:nth-child(2)::before {
-    //   background-image: url(../images/clock.svg);
-    // }
-    // &:nth-child(3)::before {
-    //   background-image: url(../images/diagram.svg);
-    // }
-    // &:nth-child(4)::before {
-    //   background-image: url(../images/astronaut.svg);
-    // }
 
-    //------------------------------------------
-    //Випадковий експеремент!!!!
-    // Cписок у змінних: ,var.scss!!!
     //------------------------------------------
 
     @each $iconName in $rules-list-icons {
@@ -50,22 +74,6 @@
       &:nth-child(#{$idx})::before {
         background-image: url(../images/#{$iconName}.svg);
       }
-    }
-  }
-  &-list {
-    display: flex;
-    gap: 30px;
-
-    &__title {
-      margin-bottom: 10px;
-      font-weight: 700;
-      font-size: 14px;
-      line-height: calc(16 / 14);
-    }
-    &__item {
-      color: var(--secondary-text-color);
-      font-size: 14px;
-      line-height: calc(24 / 14);
     }
   }
 }
