--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -11,6 +11,43 @@
     transform: color, background-color;
   }
 }
+
+.button-menu-open{
+  display: flex;
+  margin-left: auto;
+  content: '';
+  width: 40px;
+  height: 40px;
+  background-color: var(--general-wight);
+  border: none;
+ @include tablet{
+  display: none;
+ }
+}
+
+.button-menu-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+
+  border-radius: 50%;
+  background: var(--general-wight);
+  // border: 1px solid rgba(0, 0, 0, 0.1);
+   border: none;
+  fill: var(--general-black);
+
+  &:focus,
+  &:hover {
+    fill: var(--accent-color);
+  }
+}
+
 .hero .btn {
   width: 200px;
   height: 50px;
