--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -171,7 +171,7 @@
     flex-direction: column;
     justify-content: space-between;
     overflow: auto;
-    outline: 1px solid orange;
+    // outline: 1px solid orange;
   }
   @include tablet {
     display: none;
