--- a/sass/layouts/_examples.scss
+++ b/sass/layouts/_examples.scss
@@ -13,10 +13,17 @@
     &-item {
       display: block;
       box-sizing: border-box;
-      width: 370px;
+      max-width: 450px;
+      width: 100%;
 
       &:hover .example-hidden-text {
         transform: translateY(0%);
+      }
+      @include tablet {
+        width: 354px;
+      }
+      @include desktop {
+        width: 370px;
       }
     }
   }
@@ -107,9 +114,9 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     @include tablet {
-      
+      justify-content: center;
     }
-    @include desktop{
+    @include desktop {
       justify-content: center;
     }
   }
