--- a/css/main.css
+++ b/css/main.css
@@ -1306,7 +1306,12 @@ img {
 
 .subscribe {
   margin-left: 0;
-  width: 470px;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .subscribe {
+    width: 470px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .subscribe {
