--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,10 @@ img {
   }
 }
 
+section {
+  outline: 1px solid black;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -549,13 +553,19 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 80px;
+  height: 60px;
+}
+@media screen and (min-width: 768px) {
+  .header-container {
+    height: 80px;
+  }
 }
 
 .link-logo {
   display: flex;
   justify-content: left;
   align-items: center;
+  height: 100%;
   font-family: "Raleway";
   font-weight: 700;
   font-size: 24px;
@@ -567,6 +577,13 @@ img {
     font-size: 26px;
     line-height: 1.1923076923;
   }
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+  height: 100%;
 }
 
 .header .link-logo {
@@ -586,10 +603,8 @@ img {
   color: var(--accent-color);
 }
 
-.header-nav {
-  display: flex;
-  align-items: center;
-  margin-right: auto;
+.header-list-text {
+  height: 100%;
 }
 
 .header-list-text .current {
@@ -624,13 +639,14 @@ img {
 @media screen and (min-width: 768px) {
   .header-list {
     display: flex;
+    height: 100%;
   }
 }
 
 .header-list .link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .header-contact {
@@ -642,8 +658,8 @@ img {
   color: aqua;
   font-family: "Roboto";
   font-weight: 500;
-  font-size: 14px;
-  line-height: 0.8571428571;
+  font-size: 12px;
+  line-height: 1.1666666667;
   letter-spacing: 0.02em;
 }
 @media screen and (min-width: 768px) {
@@ -656,7 +672,7 @@ img {
     align-items: center;
     gap: 50px;
     font-size: 14px;
-    line-height: 0.9285714286;
+    line-height: 1.1428571429;
     flex-direction: row;
   }
 }
@@ -941,8 +957,6 @@ img {
 }
 
 .development {
-  /* padding-top: 94px; */
-  padding-bottom: 94px;
   background-color: var(--general-wight);
   display: none;
 }
@@ -950,6 +964,9 @@ img {
   .development {
     display: contents;
   }
+}
+.development-container {
+  padding-bottom: 94px;
 }
 .development-title {
   font-size: 36px;
@@ -997,7 +1014,7 @@ img {
   }
 }
 .team-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 28px;
   line-height: 1.1785714286;
@@ -1012,6 +1029,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .team-title {
+    margin-bottom: 50px;
     font-size: 36px;
     line-height: 1.1666666667;
   }
@@ -1110,7 +1128,7 @@ img {
 }
 
 .customers__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-size: 28px;
   line-height: 1.1785714286;
   text-align: center;
@@ -1118,6 +1136,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .customers__title {
+    margin-bottom: 50px;
     font-size: 36px;
     line-height: 1.1666666667;
   }
